Update and rename ls.html to index.html

--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
                             <h3 class="text-2xl font-bold mb-4">Maintenance Optimization</h3>
                             <p class="mb-4">Redesigned preventive maintenance schedules, reducing unplanned breakdowns by 35% and improving overall equipment effectiveness.</p>
                             <div class="space-y-2">
-                                <div class="text-sm">• Reduced downtime</div>
-                                <div class="text-sm">• Improved scheduling</div>
-                                <div class="text-sm">• Enhanced efficiency</div>
+                                <div class="text-sm">Â• Reduced downtime</div>
+                                <div class="text-sm">Â• Improved scheduling</div>
+                                <div class="text-sm">Â• Enhanced efficiency</div>
                             </div>
                         </div>
                     </div>
@@ -306,9 +306,9 @@
                             <h3 class="text-2xl font-bold mb-4">Operations Leadership</h3>
                             <p class="mb-4">Successfully managed multiple shift operations ensuring 99.5% plant uptime while leading teams of electricians and fitters.</p>
                             <div class="space-y-2">
-                                <div class="text-sm">• Team leadership</div>
-                                <div class="text-sm">• Continuous operations</div>
-                                <div class="text-sm">• Safety compliance</div>
+                                <div class="text-sm">Â• Team leadership</div>
+                                <div class="text-sm">Â• Continuous operations</div>
+                                <div class="text-sm">Â• Safety compliance</div>
                             </div>
                         </div>
                     </div>
@@ -423,7 +423,7 @@
     <!-- Footer -->
     <footer class="bg-white py-8 px-6 border-t border-black">
         <div class="max-w-7xl mx-auto text-center">
-            <p class="text-gray-600">© 2024 Lucky Sahoo. All rights reserved.</p>
+            <p class="text-gray-600">Â© 2024 Lucky Sahoo. All rights reserved.</p>
         </div>
     </footer>
 
