--- a/index.html
+++ b/index.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Title & Basic SEO -->
+  <title>Lucky Sahoo - Electrical Engineer & MBA in Operations & Data Science</title>
+  <meta name="description" content="Official portfolio of Lucky Sahoo. Electrical Engineer with 4+ years of experience, MBA in Operations & Data Science. Skilled in maintenance, operations, and business management.">
+  <meta name="keywords" content="Lucky Sahoo, Electrical Engineer, MBA, Operations, Data Science, Portfolio, Maintenance Engineer, GitHub Pages">
+  <meta name="author" content="Lucky Sahoo">
+  <meta name="robots" content="index, follow">
+
+  <!-- Open Graph (For Social Media Preview) -->
+  <meta property="og:title" content="Lucky Sahoo - Electrical Engineer & MBA">
+  <meta property="og:description" content="Portfolio of Lucky Sahoo. Electrical Engineer with 4+ years of experience, MBA in Operations & Data Science.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://luckysahoo.com/">
+  <meta property="og:image" content="https://luckysahoo.com/preview.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Lucky Sahoo - Electrical Engineer & MBA">
+  <meta name="twitter:description" content="Portfolio of Lucky Sahoo. Electrical Engineer & MBA in Operations & Data Science.">
+  <meta name="twitter:image" content="https://luckysahoo.com/preview.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png">
+
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
     <title>Lucky Sahoo - Engineering Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -477,3 +509,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97037bb383fa41b6',t:'MTc1NTM3NDA2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
