--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Lucky Sahoo | Portfolio</title>
+<meta name="description" content="Official website of Lucky Sahoo. Electrical Engineer, MBA student, and tech enthusiast. Explore my projects, portfolio, and achievements.">
+<meta name="keywords" content="Lucky Sahoo, Electrical Engineer, Portfolio, MBA, Data Science, Operations">
     <meta name="google-site-verification" content="VgFPbM5Hcd4Nb6XoZ1QKbA9CdARqYHjrCi663HxPoTk" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -510,5 +513,6 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'97037bb383fa41b6',t:'MTc1NTM3NDA2My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
